--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,8 @@ body {
 	font-family: 'Montserrat', sans-serif;	
 }
 
+/* Nav */
+
 .menu {
 	height: 70px;
 	background-color: #212F3E; 		
@@ -49,6 +51,8 @@ body {
 	background-color: #1EB18A;
 }
 
+/* Fondo Start Bootstrap */
+
 .banner {
 	height: 700px;
 	background-color: #1EB18A;
@@ -67,7 +71,6 @@ body {
 
 .div-about h1 {
 	font-size: 40px;
-	margin: 10px;
 }
 
 .div-info p {
@@ -83,8 +86,10 @@ body {
 	background-color: white;
 }
 
+/* Portafolio */
+
 .portafolio {
-	height: 820px;
+	height: 850px;
 	background-color: white;
 }
 
@@ -93,8 +98,16 @@ body {
 }
 
 .titulo-portafolio {
+	padding-top: 30px;
 	text-align: center;
 	font-size: 25px;
+}
+
+/* About */
+
+.div-about {
+	padding: 50px 0;
+	text-align: center;
 }
 
 .about {
@@ -128,8 +141,10 @@ body {
 	padding: 40px;
 }
 
+/* Contact Me */
+ 
 .div-contact {
-	padding: 80px 0;
+	padding: 50px 0;
 	text-align: center;
 }
 
@@ -177,6 +192,8 @@ body {
 	text-align: center;
 }
 
+/* Footer */
+
 footer {
   color: white;
 }
@@ -204,7 +221,7 @@ footer .footer-col2 h3 {
 }
 
 footer .footer-below {
-  padding: 25px 0;
+  padding: 5px 0;
   background-color: #233140;
   text-align: center;
   font-size: 14px;
@@ -250,6 +267,8 @@ footer .footer-below {
 	text-decoration: underline;
 }
 
+/* Línea y estrella */
+
 hr {
 	background-color: white;
 	width: 100px;
@@ -265,3 +284,44 @@ hr {
 .fa-star {
 	margin: 10px;
 }
+
+/* Hover de la sección Portafolio */
+
+.port {
+  position: relative;
+  cursor: pointer;
+}
+
+.port:after {
+    content: "\f00e";
+    font-size: 5rem;
+    position: absolute;
+    width: 95%;
+    height: 95%;
+    top: 5px;
+    left: 10px;
+    right: 0;
+    background-color: #18BC9C;
+    color: #fff;
+    font-family: "FontAwesome";
+    box-sizing: border-box;
+    text-align: center;
+    padding: 25% 0;
+    opacity: 0;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s;
+	cursor: pointer;
+}
+
+.port:hover:after {
+	opacity: 0.98;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s;
+}
+
